<resources>
    <string name="app_name">GitTrackr</string>
    <string name="organization_name">Organization Name</string>
    <string name="app_description">View your GitHub organization members and their details with ease. Find and filter through the list, and view detailed profiles to stay up-to-date with their activity.</string>
    <string name="view">View</string>
    <string name="app_logo">App Logo</string>
    <string name="DUMMY_NAME">Sunny Sahsi</string>
    <string name="DUMMY_USERNAME">sahsisunny</string>
    <string name="DUMMY_BIO">Passionate full-stack developer with experience in developing web applications using React, Node.js, and MongoDB. Excited about using technology to solve real-world problems and constantly seeking new challenges to expand my skillset. Open to collaboration and always looking for opportunities to contribute to meaningful open-source projects.</string>
    <string name="DUMMY_FOLLOWERS">96 followers</string>
    <string name="DUMMY_FOLLOWING">12 following</string>
    <string name="view_on_github">GitHub</string>
    <string name="view_repos">Repos</string>
    <string name="view_list">View List</string>
    <string name="exit">Exit</string>
    <string name="loading_animation">Loading Animation</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>