<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_details_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_details_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/user_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/DUMMY_NAME"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_details_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/DUMMY_USERNAME"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_details_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="8dp"
        android:text="@string/DUMMY_BIO"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_details_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/DUMMY_FOLLOWERS"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/user_details_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DUMMY_FOLLOWING"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/user_details_git_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:maxWidth="200dp"
            android:text="@string/view_on_github"
            app:cornerRadius="15dp"
            app:icon="@drawable/git_icon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/user_details_repos_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:maxWidth="200dp"
            android:text="@string/view_repos"
            app:cornerRadius="15dp"
            app:icon="@drawable/repo_icon" />

    </LinearLayout>


</LinearLayout>
