<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/app_description"
        android:textSize="18sp"
        android:textAlignment="center"
        android:lineSpacingExtra="8sp"/>

    <EditText
        android:id="@+id/org_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/organization_name"
        android:textAlignment="center"
        android:inputType="text"
        android:minHeight="50dp"
        android:autofillHints="organization"
        app:hintEnabled="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_list"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:icon="@drawable/view_icon"
        android:layout_gravity="bottom"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:icon="@drawable/round_logout"
        android:layout_gravity="bottom"/>

</LinearLayout>
